Updating contributers names 😂

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "startDev": "nodemon server.js"
   },
-  "author": "Ayush Nandanwar, Anup Mallah, Pratik Darange, Bhagyashree Kadam",
+  "author": "Ayush Nandanwar, Anup Mallah, Pratik Darange, Bhagyashree Kadam , Mitesh Tank",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
